# rust-redis-gui-app

./: .gitignore  .oxlintrc.json  components.d.ts  components.json  index.html  ncu-output.txt  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: labeler.yml  release.yml
.github/workflows/: label.yml  release.yml  run-clippy.yml  test-frontend.yml  test-rust.yml  update-deps.yml
.zed/: settings.json
src/: App.vue  Store.ts  app.css  constants.ts  main.ts  router.ts  routes.ts
src-tauri/: Cargo.toml  logger.yml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/db_migrations/: V1__servers.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: add_server.rs  close_server.rs  connect_to_server.rs  delete_key.rs  get_keys.rs  get_servers.rs  mod.rs  open_server.rs  retrieve_key.rs  retrieve_keys.rs
src-tauri/src/core/: errors.rs  mod.rs
src-tauri/src/core/app_state/: state.rs
src-tauri/src/core/database/: database.rs  mod.rs
src-tauri/src/models/: mod.rs  model.rs  server.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/redis/: mod.rs
src-tauri/src/state/: app.rs
src-tauri/src/tests/: common.rs
src-tauri/src/utils/: db_path.rs  format_ttl_to_human_readable.rs  logger.rs  mod.rs  redis_to_json_value.rs  updater.rs
src/components/: Icon.vue  UpdateStatusModal.vue
src/components/ui/button/: Button.vue  index.ts
src/components/ui/form/: FormControl.vue  FormDescription.vue  FormItem.vue  FormLabel.vue  FormMessage.vue
src/components/ui/input/: Input.vue
src/components/ui/label/: Label.vue
src/components/ui/sonner/: Sonner.vue
src/components/ui/table/: Table.vue  TableBody.vue  TableCaption.vue  TableCell.vue  TableEmpty.vue  TableFooter.vue  TableHead.vue  TableHeader.vue  TableRow.vue
src/composables/: index.ts  useFormatKeyType.ts  useGetKeys.ts  useLoading.ts
src/modules/AddServer/: index.ts
src/modules/AddServer/components/: AddServer.vue
src/modules/AddServer/composables/: useAddServer.ts
src/services/: KeyService.ts  ServerService.ts
src/stores/: useAppUpdater.ts  useKeyStore.ts  useServerStore.ts
src/tests/: App.test.ts  setupTests.ts
src/tests/__utils__/: useFakeRouter.ts  useServerFactory.ts
src/tests/components/: Icon.test.ts
src/tests/composables/: useFormatKeyType.test.ts  useLoading.test.ts
src/tests/services/: KeyService.test.ts  ServerService.test.ts  ServerServices.test.ts
src/tests/stores/: useKeyStore.test.ts  useServerStore.test.ts
src/tests/utils/: shadcnUtils.test.ts
src/tests/views/: index.test.ts
src/tests/views/AddServer/: index.test.ts
src/tests/views/AddServer/components/: ServerForm.test.ts
src/tests/views/AddServer/composables/: useAddServerForm.test.ts
src/tests/views/Home/: index.test.ts
src/tests/views/Server/: index.test.ts
src/tests/views/Server/components/: CurrentKeyDetails.test.ts  DeleteKeyModal.test.ts  FilterForm.test.ts  (+1 more)
src/types/: key.d.ts  server.d.ts
src/utils/: shadcnUtils.ts
src/views/AddServer/: index.vue
src/views/AddServer/components/: ServerForm.vue
src/views/AddServer/composables/: useAddServer.ts  useAddServerForm.ts
src/views/Home/: index.vue
src/views/Server/: index.vue
src/views/Server/components/: CurrentKeyDetails.vue  CurrentKeyDetailts.vue  DeleteKeyModal.vue  FilterForm.vue  KeyHeader.vue  KeysTable.vue
src/views/Server/composables/: useDeleteKey.ts  useFilterForm.ts  useFullScreenView.ts  useKeyControl.ts
(+7 files in other folders)
