[package]
name = "redis-gui"
version = "0.1.0"
description = "Desktop app built in Rust to connect to Redis servers"
authors = ["Mohamed Alaa"]
edition = "2021"

[lib]
name = "redis_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = "0.32.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
clippy = { version = "0.1", optional = true }
