[package]
name = "redis-gui"
version = "0.1.0"
description = "Desktop app built in Rust to connect to Redis servers"
authors = ["Mohamed Alaa"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mohammed-alaa/rust-redis-gui-app"
readme = "../README.md"
keywords = ["redis", "gui", "desktop", "rust", "vue", "typescript"]
categories = ["gui", "database", "redis", "desktop"]

[lib]
name = "redis_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1.0.4", features = ["json", "tokio-comp"] }
uuid = { version = "1.21.0", features = ["v4", "v7"] }
rusqlite = { version = "0.37.0", features = ["serde_json", "time", "bundled"] }
refinery = { version = "0.9.0", features = ["int8-versions", "rusqlite"] }
time = { version = "0.3.47", features = ["formatting", "serde-human-readable", "serde-well-known"] }
tokio = "1.49.0"
log = "0.4.29"
tauri-plugin-log = { version= "2", features = ["colored"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
testcontainers = "0.27.0"
tokio = "1.49.0"
